--- a/index.html
+++ b/index.html
@@ -153,9 +153,8 @@
                     <div class="col-lg-8 mb-4 order-0" style="background-color:white; height:80vh;border-radius: 10px;">
                         <!-- code here -->
                         <!-- <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)" style="background-color: red;width:30vh; height: 30vh;"></div> -->
-
+                        <input type="button" value="start" onclick="startC()" class="mt-3">
                         <div style="margin-top: -400px;">
-
 
                             <div id="wire5" ondrop="drop(event)" ondragover="allowDrop(event)">
                                 <div class="wire5_line1" id="wire5_line1"></div>
@@ -186,7 +185,7 @@
                             <div id="switch1" ondrop="drop(event)" ondragover="allowDrop(event)">
                                 <div style="display: flex; align-items: center;" class="switch_cont" id="switch_cont">
                                     <div class="firstLine1"></div>
-                                    <div class="middleLine1"></div>
+                                    <div style="cursor: pointer;" class="middleLine1" id="abc"></div>
                                     <div class="firstLine1"></div>
                                 </div>
                             </div>
@@ -214,7 +213,7 @@
                                 <div class="relay_lin2 r1"></div>
                                 <div class="relay_lin3 r1"></div>
                                 <div class="relay_lin4 r1"></div>
-                                <div class="relay_lin6 r1"></div>                                
+                                <div class="relay_lin6 r1" id="relay_toggle"></div>                                
                                 <div class="relay_lin5 r1"></div>
                             </div>
 
@@ -222,7 +221,6 @@
                         </div>
 
                     </div>
-
 
                 </div>
             </div>
